# kbd-audio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  audio-logger.cpp  audio-logger.h  audio_logger.cpp  audio_logger.h  build-vars.h  build-vars.h.in  common-gui.cpp  common-gui.h  common.cpp  common.h  compile.sh  compress-n-grams.cpp  constants.h  generate-clusters.cpp  guess-qp.cpp  guess-qp2.cpp  guess_all.cpp  guess_all_gui.cpp  guess_qp.cpp  guess_qp2.cpp  imconfig-vtx32.h  index-keytap2-gui-tmpl.html  index-keytap3-app-tmpl.html  index-keytap3-gui-tmpl.html  key-average-gui.cpp  key-detector.cpp  key_average_gui.cpp  key_detector.cpp  key_logger.cpp  key_logger.h  keytap-gui.cpp  keytap.cpp  keytap2-gui-old.cpp  keytap2-gui.cpp  (+23 more)
.github/workflows/: build.yml  codeql-analysis.yml
build-em/keytap-gui/: compile.sh
build-em/view-full-gui/: compile.sh
cmake/: BuildTypes.cmake  FindFFTW.cmake  FindSDL2.cmake
cmake/sdl2/: FindSDL2.cmake
data/: english_quadgrams.txt  english_trigrams.txt  ggwords-3-gram.dat.binary  ggwords-4-gram.dat.binary  ggwords-5-gram.dat.binary  record.kbd  sample_quadgrams.txt
